outputs of models

--- a/Gaussian Process Regressor.ipynb
+++ b/Gaussian Process Regressor.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,8 +315,16 @@
     "ax.legend(loc='upper left')\n",
     "ax.grid(True)\n",
     "plt.tight_layout()\n",
+    "plt.savefig(\"gaussian_process_plot.png\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
